# marketing_agent

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
marketing_agent/: config.py  crew.py  db.py
marketing_agent/agents/: calendar_agent.py  copywriter_agent.py  intake_agent.py  publisher_agent.py  strategy_agent.py
marketing_agent/models/: __init__.py  brand_brief.py  calendar_slot.py  post.py  strategy.py
marketing_agent/tasks/: calendar_tasks.py  copywriter_tasks.py  intake_tasks.py  publisher_tasks.py  strategy_tasks.py
marketing_agent/tools/: postiz_tool.py  supabase_tool.py
supabase/: schema.sql
